updated responsive and scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,9 @@
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #272C34 #121212;
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Inter", sans-serif;
     font-weight: 500;
